--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -8,15 +8,13 @@
             <td class="col-md-1"></td>
             <!-- serach field holds the value that is searched -->
             <td class="col-md-10" style="padding-top: 15px !important; padding-bottom:30px !important;">
-              <%= form_tag(histories_path, :method => "get", id: "search-form" ) do %>
-                <%= text_field_tag :search, params[:search], placeholder: "Search Within Opportunity Name, ID, Code Name, or Customer Group" %>
-                <input id="search-button" class="btn-search" style="width: 4% !important;" type="image" src="/assets/search.png" alt="Submit_tag"> 
-                <td class="col-md-1"></td>
-              <% end %>
+              <%= text_field_tag :search, params[:search], style: "width:96%",placeholder: "Search Within Opportunity Name, ID, Code Name, or Customer Group", id: "history-search"%>
+              <a href="#" name="history-search-button" style="width:4% !important;" class="btn btn-lg btn-search glyphicon glyphicon-search"></a>
+             <td class="col-md-1"></td>
             </td>
           </tr>
         </table>
-        <!-- Radio Buttons in History page to limit the search to opportunities within 30, 60, or 90 days -->
+        
         <form role="form" class="form-inline col-md-12">
           <div class="col-md-6 row">
             <div class="col-md-1"></div>
@@ -36,14 +34,11 @@
                   <option id="slArchField" value="slArch">Solution Architect</option>
                   <option id="sllOrgField" value="sllOrg">Service Line Lead Organization</option>
                 </select>
-                <div class="col-md-1">
-                  <a href="#" name="invalid-btn" class="btn btn-info btn-lg glyphicon selector-button control-label-button">&#xe092;</a>
-                </div>
               </div>  
             </div>
           </div>
-            <!-- drop down menu in History Page to sort the opportunities by a specific field -->
-            <div class="col-md-6 row">
+          <!-- drop down menu in History Page to sort the opportunities by a specific field -->
+          <div class="col-md-6 row">
             <div class="col-md-4">
               <label class="black-text sort-dropdown-label">
                   Sort By:
@@ -64,9 +59,6 @@
                 
               </div>  
             </div>
-            <div class="col-md-1">   
-                  <a href="#" name="sort-btn" class="btn btn-info btn-lg glyphicon selector-button">&#xe092;</a>
-                </div>
             <div class="col-md-1"></div>
           </div>
       </div>    
@@ -180,191 +172,129 @@
 
   <script>
 
-    function createClass(name,rules){
-      var style = document.createElement('style');
-      style.type = 'text/css';
-      document.getElementsByTagName('head')[0].appendChild(style);
-      if(!(style.sheet||{}).insertRule) 
-        (style.styleSheet || style.sheet).addRule(name, rules);
-      else
-        style.sheet.insertRule(name+"{"+rules+"}",0);
-    }
-    createClass('html body div.jumbotron div.upper-search-box div.inner-search-bar.col-md-12 table.col-md-12 tbody tr td.col-md-10 form#search-form input#search',"width: 96% !important; padding-left: 10px !important;");
+    $(document).on("click", "a[name='history-search-button']", function (e) {
+        var keyword=document.getElementById('history-search').value;
 
-    $(document).on("click", "a[name='invalid-btn']", function (e) {
-      select = document.getElementById('invalidDiv').value;
-      url = window.location.href;
-      if (window.location.href.indexOf('?') > -1) {
-        urlSplit = url.split('?');
-        if (urlSplit[1].indexOf('&') > -1) {
-          diffParts = urlSplit[1].split('&');
+        var selectedInvalid = document.getElementById('invalidDiv').value;
+        
+        var selectedSort = document.getElementById('sorting').value;
+        
+        count = 0;
+        tempUrl = "";
+        if (keyword != "") {
+          if (tempUrl == "")
+            tempUrl += "?search="+keyword;
+          else 
+            tempUrl += "&search="+keyword;
+          count++;
+        }
+        if (selectedInvalid != "all") {
+          if (tempUrl == "")
+            tempUrl += "?invalid="+selectedInvalid;
+          else
+            tempUrl += "&invalid="+selectedInvalid;
+          count++;
+        }
+        if (selectedSort !== "none") {
+          if (tempUrl == "")
+            tempUrl += "?sort="+selectedSort;
+          else
+            tempUrl += "&sort="+selectedSort;
+          count++;
+        }
+        url = window.location.href;
+        if (url.indexOf('?') > -1) {
+          urlSplit = url.split('?');
+          newUrl = urlSplit[0];
+        }
+        else
+          newUrl = url;
+
+        window.location = newUrl + tempUrl;
+      });
+
+
+      $(document).keypress(function(e) {
+        if(e.which == 13) {
+          var keyword=document.getElementById('history-search').value;
+
+          var selectedInvalid = document.getElementById('invalidDiv').value;
           
-          if (diffParts.length > 1) 
-            newUrl = urlSplit[0]+'?';
-          else
-            newUrl = urlSplit[0];
-
-          if (diffParts.length > 1) {
-            for (i = 0; i < diffParts.length; i++) {
-              if(select == "all") {
-                if (diffParts[i].indexOf('invalid') == -1) {
-                  if (i != diffParts.length-1)
-                    newUrl += diffParts[i]+'&';
-                  else
-                    newUrl += diffParts[i];
-                }
-              }
-              else if (diffParts[i].indexOf('invalid') == -1 && diffParts[i].indexOf('page') == -1) {
-                if (i != diffParts.length-1)
-                  newUrl += diffParts[i]+'&';
-                else
-                  newUrl += diffParts[i];
-              }
-              else if (diffParts[i].indexOf('invalid') > -1) {
-                if ( select != "all") {
-                  if (i != diffParts.length-1)
-                    newUrl += "invalid="+select+'&';
-                  else
-                    newUrl += "invalid="+select;
-                }
-              }
-            }
-            if (newUrl.indexOf('invalid') == -1 && select != "all")
-              newUrl += "&invalid="+select;
+          var selectedSort = document.getElementById('sorting').value;
+          
+          count = 0;
+          tempUrl = "";
+          if (keyword != "") {
+            if (tempUrl == "")
+              tempUrl += "?search="+keyword;
+            else 
+              tempUrl += "&search="+keyword;
+            count++;
           }
-        }
-        else if (urlSplit[1].indexOf('invalid') > -1 && select != "all")
-          newUrl = urlSplit[0]+ "?invalid=" + select;
-        else if (urlSplit[1].indexOf('invalid') > -1 && select == "all")
-          newUrl = urlSplit[0];
-        else if (urlSplit[1].indexOf('invalid') == -1)
-          newUrl = window.location.toString() + "&invalid=" + select;
-
-        if (newUrl.substring(newUrl.length-1) == '&')
-          newUrl = newUrl.substring(0, newUrl.length-1);
-
-        window.location = newUrl;
-      }
-      else if (select != "all") {
-        newUrl = window.location.toString();
-
-        if (newUrl.substring(newUrl.length-1) == '&')
-          newUrl = newUrl.substring(0, newUrl.length-1);
-
-        window.location = newUrl + "?invalid=" + select;
-      }
-      else {
-        newUrl = window.location.toString();
-
-        if (newUrl.substring(newUrl.length-1) == '&')
-          newUrl = newUrl.substring(0, newUrl.length-1);
-
-        window.location = newUrl;
-      }
-    });  
-
-    $(document).on("click", "a[name='sort-btn']", function (e) {
-      select = document.getElementById('sorting').value;
-      url = window.location.href;
-      if (window.location.href.indexOf('?') > -1) {
-        urlSplit = url.split('?');
-        if (urlSplit[1].indexOf('&') > -1) {
-          diffParts = urlSplit[1].split('&');
-
-          if (diffParts.length > 1) 
-            newUrl = urlSplit[0]+'?';
-          else
-            newUrl = urlSplit[0];
-
-          if (urlSplit[1].indexOf('sort') == -1 && select != "none") 
-            newUrl = url + "&sort=" + select;
-          else {
-            for (i = 0; i < diffParts.length; i++) {
-              if (diffParts[i].indexOf('sort') == -1) {
-                if (i != diffParts.length-1)
-                  newUrl += diffParts[i]+'&';
-                else
-                  newUrl += diffParts[i];
-              }
-              else if (diffParts[i].indexOf('sort') > -1) {
-                if ( select != "none") {
-                  if (i != diffParts.length-1)
-                    newUrl += "sort="+select+'&';
-                  else
-                    newUrl += "sort="+select;
-                }
-              }
-            }
+          if (selectedInvalid != "all") {
+            if (tempUrl == "")
+              tempUrl += "?invalid="+selectedInvalid;
+            else
+              tempUrl += "&invalid="+selectedInvalid;
+            count++;
           }
+          if (selectedSort !== "none") {
+            if (tempUrl == "")
+              tempUrl += "?sort="+selectedSort;
+            else
+              tempUrl += "&sort="+selectedSort;
+            count++;
+          }
+          url = window.location.href;
+          if (url.indexOf('?') > -1) {
+            urlSplit = url.split('?');
+            newUrl = urlSplit[0];
+          }
+          else
+            newUrl = url;
+
+          window.location = newUrl + tempUrl;
         }
-        else if (urlSplit[1].indexOf('sort') > -1 && select != "none")
-          newUrl = urlSplit[0]+ "?sort=" + select;
-        else if (urlSplit[1].indexOf('sort') > -1 && select == "none")
-          newUrl = urlSplit[0];
-        else if (urlSplit[1].indexOf('sort') == -1)
-          newUrl = window.location.toString() + "&sort=" + select;
+      });
 
-        if (newUrl.substring(newUrl.length-1) == '&')
-          newUrl = newUrl.substring(0, newUrl.length-1);
 
-        window.location = newUrl;
+      window.onload = function() {
+        if (window.location.href.indexOf("sort")) {
+          if (window.location.href.indexOf("opptyName") > -1)
+            document.getElementById("opt2").selected = true;
+          else if (window.location.href.indexOf("opptyId") > -1)
+            document.getElementById("opt3").selected = true;
+          else if (window.location.href.indexOf("proposalDueDate") > -1)
+            document.getElementById("opt4").selected = true;
+          else if (window.location.href.indexOf("captureMgr") > -1)
+            document.getElementById("opt5").selected = true;
+          else if (window.location.href.indexOf("programMgr") > -1)
+            document.getElementById("opt6").selected = true;
+          else if (window.location.href.indexOf("proposalMgr") > -1)
+            document.getElementById("opt7").selected = true;
+          else if (window.location.href.indexOf("value") > -1)
+            document.getElementById("opt8").selected = true;
+          else
+            document.getElementById("opt1").selected = true;
+        }
+
+        if (window.location.href.indexOf("invalid")) {
+          if (window.location.href.indexOf("rfpDate") > -1)
+            document.getElementById("rfpDateField").selected = true;
+          else if (window.location.href.indexOf("leadEstim") > -1)
+            document.getElementById("leadEstimField").selected = true;
+          else if (window.location.href.indexOf("technicalLead") > -1)
+            document.getElementById("technicalLeadField").selected = true;
+          else if (window.location.href.indexOf("slDir") > -1)
+            document.getElementById("slDirField").selected = true;
+          else if (window.location.href.indexOf("slArch") > -1)
+            document.getElementById("slArchField").selected = true;
+          else if (window.location.href.indexOf("sllOrg") > -1)
+            document.getElementById("sllOrgField").selected = true;
+          else
+            document.getElementById("allInvalidFields").selected = true;
+        }
       }
-      else if (select != "none") {
-        newUrl = window.location.toString();
-
-        if (newUrl.substring(newUrl.length-1) == '&')
-          newUrl = newUrl.substring(0, newUrl.length-1);
-
-        window.location = newUrl + "?sort=" + select;
-      }
-      else { 
-        newUrl = window.location.toString();
-
-        if (newUrl.substring(newUrl.length-1) == '&')
-          newUrl = newUrl.substring(0, newUrl.length-1);
-
-        window.location = newUrl;
-      }
-    });
-
-    window.onload = function() {
-
-      if (window.location.href.indexOf("sort")) {
-        if (window.location.href.indexOf("opptyName") > -1)
-          document.getElementById("opt2").selected = true;
-        else if (window.location.href.indexOf("opptyId") > -1)
-          document.getElementById("opt3").selected = true;
-        else if (window.location.href.indexOf("proposalDueDate") > -1)
-          document.getElementById("opt4").selected = true;
-        else if (window.location.href.indexOf("captureMgr") > -1)
-          document.getElementById("opt5").selected = true;
-        else if (window.location.href.indexOf("programMgr") > -1)
-          document.getElementById("opt6").selected = true;
-        else if (window.location.href.indexOf("proposalMgr") > -1)
-          document.getElementById("opt7").selected = true;
-        else if (window.location.href.indexOf("value") > -1)
-          document.getElementById("opt8").selected = true;
-        else
-          document.getElementById("opt1").selected = true;
-      }
-
-      if (window.location.href.indexOf("invalid")) {
-        if (window.location.href.indexOf("rfpDate") > -1)
-          document.getElementById("rfpDateField").selected = true;
-        else if (window.location.href.indexOf("leadEstim") > -1)
-          document.getElementById("leadEstimField").selected = true;
-        else if (window.location.href.indexOf("technicalLead") > -1)
-          document.getElementById("technicalLeadField").selected = true;
-        else if (window.location.href.indexOf("slDir") > -1)
-          document.getElementById("slDirField").selected = true;
-        else if (window.location.href.indexOf("slArch") > -1)
-          document.getElementById("slArchField").selected = true;
-        else if (window.location.href.indexOf("sllOrg") > -1)
-          document.getElementById("sllOrgField").selected = true;
-        else
-          document.getElementById("allInvalidFields").selected = true;
-      }
-    }
 
   </script>
 
