--- a/app/assets/stylesheets/browse.css.scss
+++ b/app/assets/stylesheets/browse.css.scss
@@ -94,9 +94,8 @@ td {
 input#search{
 	border:1px solid;
 	border-color: black;
-	height:40px;
-	padding:0px 0px !important; 
-	position:relative;
+	height: 40px;
+	padding: 8px !important; 
 	font-size: 20px;
 }
 
