--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -7,10 +7,13 @@
           <tr style="font-size:24px;">
             <td class="col-md-1"></td>
             <!-- serach field holds the value that is searched -->
-            <td class="col-md-10" style="padding-top: 15px !important; padding-bottom:30px !important;">
-              <%= text_field_tag :search, params[:search], style: "width:96%",placeholder: "Search Within Opportunity Name, ID, Code Name, or Customer Group", id: "history-search"%>
-              <a href="#" name="history-search-button" style="width:4% !important;" class="btn btn-lg btn-search glyphicon glyphicon-search"></a>
-             <td class="col-md-1"></td>
+              <td class="col-md-10" style="padding-top: 15px !important;">
+                <%= text_field_tag :search, params[:search], style: "width:94%;",placeholder: "Search Within Opportunity Name, ID, Code Name, or Customer Group", id: "history-search"%>
+                <a href="#" name="history-search-button" style="width:5.5% !important; height: 100% !important;" >
+                  <img src="/assets/search.png" alt="Click to Search" 
+                  style="width:42px !important; height:40px !important; padding: 0px !important; margin-bottom: 9px !important; background-color: #005DA0; border-radius: 0px !important; position: absolute !important; left: 86.6% !important; border: 1px black solid !important;" class="btn"/>
+                </a>
+              <td class="col-md-1"></td>
             </td>
           </tr>
         </table>
