--- a/app/views/allocated_tasks/index.html.erb
+++ b/app/views/allocated_tasks/index.html.erb
@@ -54,7 +54,7 @@
                                 <% @assigned_writer_dict[id].each do |o|%>
                                   <%if o.oppty.present?%>
                                     <li id="<%= o.id%>" class="col-md-12">
-                                        <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty%></h5>
+                                        <h5 class="col-md-11"><%= link_to o.oppty.opptyName, o.oppty, style: "border: 0px !important;"%></h5>
                                         <img id="delete-btn-manager" class="btn-x-manager" onclick="confirmDeleteManager(<%= o.id %>, <%= name.delete(' ') + 'ajax' + 'assigned'%>)" src="/assets/redx.png" alt="X" border="0"/>
                                     </li>
                                   <%end%>
