UI for browse and history page

--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -21,12 +21,12 @@
         <table class="form col-md-12">
           <tr>
             <td class="col-md-1">
-              <label class="black-text field-label" style="padding-left: 101px;">
+              <label class="black-text field-label" style="position: absolute; left: 8.5%; top: 40px;">
                 Within:
               </label>
             </td>
 
-            <td class="col-md-1">
+            <td class="col-md-1" style="position: absolute; left: 15%;">
               <div>
                 <div class="toggle-btn radio black-text" id="within" name="within">
                   <input id="thirty_days_left" name="limiting" type="radio" value="30">30 Days
@@ -46,12 +46,12 @@
             </td>
 
             <td class="col-md-2">
-              <label class="black-text field-label">
+              <label class="black-text field-label" style="position: absolute; left: 22%; top: 40px;">
                 Invalid Field:
               </label>
             </td>
 
-            <td class="col-md-2">
+            <td class="col-md-2" style="position: absolute; left: 30%; top: 40px;">
               <div>
                 <select class="selector col-md-10" id="invalidDiv" name="invalidDiv">
                   <option id="allInvalidFields" value="all">all</option>
@@ -66,12 +66,12 @@
             </td>
 
             <!-- drop down menu in Browse Page to sort the opportunities by a specific field -->
-            <td class="col-md-1">
+            <td class="col-md-1" style="position: absolute; left: 44%; top: 40px;">
               <label class="black-text sort-dropdown-label">
                 Sort By:
               </label>
             </td>
-            <td class="col-md-2">
+            <td class="col-md-2" style="position: absolute; left: 52%; top: 40px;">
               <div>
                 <select class="selector col-md-10" id="sorting" name="sorting">
                   <option id="opt1" value="none">none</option>
@@ -85,12 +85,12 @@
                 </select>
               </div>  
             </td>
-            <td class="col-md-1">
+            <td class="col-md-1" style="position: absolute; left: 68%; top: 40px;">
               <label class="black-text sort-dropdown-label">
                 SL Director:
               </label>
             </td>
-            <td class="col-md-2">
+            <td class="col-md-2" style="position: absolute; left: 76%; top: 40px;">
               <div>
                 <select class="selector col-md-10" id="filter" name="filter">
                   <option id="allSlDir" value="all">all</option>
