--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -21,12 +21,13 @@
         <form role="form" class="form-inline col-md-12">
           <div class="col-md-6 row">
             <div class="col-md-1"></div>
+            <div class="col-md-1"></div>
             <div class="col-md-4">
-              <label class="black-text field-label" style="padding-left:7px !important; float:right !important;">
+              <label class="black-text field-label" style="padding-left:7px !important; float:right !important; position: absolute; left: 18%; top: 40px;">
                 Invalid Field:
               </label>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6" style="position: absolute; left: 40%; top: 40px;">
               <div>
                 <select class="selector col-md-10" id="invalidDiv" name="invalidDiv">
                   <option id="allInvalidFields" value="all">all</option>
@@ -43,11 +44,11 @@
           <!-- drop down menu in History Page to sort the opportunities by a specific field -->
           <div class="col-md-6 row">
             <div class="col-md-4">
-              <label class="black-text sort-dropdown-label">
+              <label class="black-text sort-dropdown-label" style="position: absolute; left: 50%; top: 40px;">
                   Sort By:
               </label>
             </div>
-            <div class="col-md-6" style="padding:0px !important;">
+            <div class="col-md-6" style="padding:0px !important; position: absolute; left: 30%; top: 40px;">
               <div>
                 <select class="selector col-md-10" id="sorting" name="sorting" style="padding:0px !important;">
                   <option id="opt1" value="none">none</option>
