--- a/app/views/oppties/show.html.erb
+++ b/app/views/oppties/show.html.erb
@@ -1,34 +1,40 @@
 <p id="notice"><%= notice %></p>
 
 <body>
-<div class="container">
   <!-- Main component for a primary marketing message or call to action -->
-  <div class="jumbotron oppty-bg" style="padding-left:25px !important; padding-right:25px !important; padding-bottom:75px !important;">
-    <h2 class="op-title"><%= @oppty.opptyName%></h2>
-    <p><b>IDIQ CA:</b> <%= @oppty.idiqCA%></p>
-    <p><b>Status:</b> <%= @oppty.status2%></p>
-    <p><b>Value:</b> <%= @oppty.value%></p>
-    <p><b>Percentage Win:</b> <%= @oppty.pWin%></p>
-    <p><b>RFP Date:</b> <%= @oppty.rfpDate%></p>
-    <p><b>Proposal Due Date:</b> <%= @oppty.proposalDueDate%></p>
-    <p><b>Award Date:</b> <%= @oppty.awardDate%></p>
-    <p><b>Submit Date:</b> <%= @oppty.submitDate%></p>
-    <p><b>Number of Writers</b>:</b> <%= @numWriters%></p>
-    <p><b>Capture Manager:</b> <%= @oppty.captureMgr%></p>
-    <p><b>Program Manager:</b> <%= @oppty.programMgr%></p>
-    <p><b>SSL Organization:</b> <%= @oppty.sllOrg%></p>
-    <p><b>Technical Lead:</b> <%= @oppty.technicalLead%></p>
-    <p><b>SLL Architect:</b> <%= @oppty.slArch%></p>
-    <p><b>ED:</b> <%= @oppty.ed%></p>
-    <p><b>ON:</b> <%= @oppty.on%></p>
-    <p><b>ATE:</b> <%= @oppty.ate%></p>
-    <p class="comment-paragraph"><b>SL Comments:</b> <%= @oppty.slComments%></p>
-    <p><b>SL Director:</b> <%= @oppty.slDir%></p>
-    <p><b>Lead Estimator:</b> <%= @oppty.leadEstim%></p>
-    <p><b>Engaged:</b> <%= @oppty.engaged%></p>
-    <p><b>Solution:</b> <%= @oppty.solution%></p>
-    <p><b>Estimate:</b> <%= @oppty.estimate%></p>
-    
+  <div class="jumbotron container" style="padding-left:25px !important; padding-right:25px !important; padding-bottom: 10px !important;">
+    <div class="col-md-12" style="padding-bottom:35px !important;">
+      <h2 class="op-title"><%= @oppty.opptyName%></h2>
+      <div class="col-md-6">  
+        <p><b>RFP Date:</b> <%= @oppty.rfpDate%></p>
+        <p><b>Proposal Due Date:</b> <%= @oppty.proposalDueDate%></p>
+        <p><b>Award Date:</b> <%= @oppty.awardDate%></p>
+        <p><b>Submit Date:</b> <%= @oppty.submitDate%></p>
+        <p><b>Codename:</b> <%= @oppty.codeName%></p>
+        <p><b>IDIQ CA:</b> <%= @oppty.idiqCA%></p>
+        <p><b>Status:</b> <%= @oppty.status2%></p>
+        <p><b>Value (in Millions of $):</b> <%= @oppty.value%></p>
+        <p><b>Percentage Win:</b> <%= @oppty.pWin%></p>
+        <p><b>Engaged:</b> <%= @oppty.engaged%></p>
+        <p><b>Solution:</b> <%= @oppty.solution%></p>
+        <p><b>Estimate:</b> <%= @oppty.estimate%></p>
+        <p><b>ED:</b> <%= @oppty.ed%></p>
+        <p><b>ON:</b> <%= @oppty.on%></p>
+        <p><b>ATE:</b> <%= @oppty.ate%></p>
+      </div>  
+      <div class="col-md-6">  
+        <p><b>Customer Group:</b> <%= @oppty.cgOrg%></p>
+        <p><b>SSL Organization:</b> <%= @oppty.sllOrg%></p>
+        <p><b>SL Director:</b> <%= @oppty.slDir%></p>
+        <p><b>SLL Architect:</b> <%= @oppty.slArch%></p>
+        <p><b>Capture Manager:</b> <%= @oppty.captureMgr%></p>
+        <p><b>Program Manager:</b> <%= @oppty.programMgr%></p>
+        <p><b>Lead Estimator:</b> <%= @oppty.leadEstim%></p>
+        <p><b>Technical Lead:</b> <%= @oppty.technicalLead%></p>
+        <p><b>Number of Writers Currently Assigned:</b> <%= @numWriters%></p>
+        <p class="comment-paragraph"><b>SL Comments:</b> <%= @oppty.slComments%></p>
+      </div>  
+    </div>
     <div class="btn-container">
       <div <%if session[:role]=="Manager" %>class="col-md-4 manager-col-button"
            <%else%>class="col-md-6 manager-col-button"
@@ -58,6 +64,5 @@
       <%end%>
     </div>  
   </div>
-</div> <!-- /container -->
 </body>
 
